...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R2W-JF-al3">
                                <rect key="frame" x="507" y="27" width="81" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="8yU-Ea-T3J"/>
                                    <constraint firstAttribute="width" constant="81" id="afw-Ir-fPw"/>
                                </constraints>
                                <state key="normal" title="Add Task"/>
                                <connections>
                                    <segue destination="buH-K4-9L9" kind="presentation" id="Fxe-5B-29Y"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tasks" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mwb-mg-8ud">
                                <rect key="frame" x="272" y="35" width="56" height="27"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W7B-CU-mmp">
...
                                <rect key="frame" x="20" y="172" width="560" height="44"/>
                                <color key="backgroundColor" red="0.1140047088265419" green="0.64492237567901611" blue="0.49791008234024048" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="nOu-rE-aHE"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <state key="normal" title="Next"/>
                                <connections>
                                    <action selector="nextButtonTapped:" destination="SXo-GE-nxT" eventType="touchUpInside" id="kD3-ak-b86"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kzc-8U-4tC">
                                <rect key="frame" x="20" y="231" width="560" height="44"/>
                                <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="0.81115392736486491" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="jIY-R6-Aai"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="Cancel"/>
                                <connections>
                                    <action selector="cancelButtonTapped:" destination="SXo-GE-nxT" eventType="touchUpInside" id="9wv-jb-lyF"/>
                                </connections>
                            </button>
                        </subviews>
...
