...
    // MARK: Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        if NodeManager.sharedManager.hasFirstNode() {
            inputTextField.placeholder = "Add another task..."
        } else {
            inputTextField.placeholder = "Type your first task here..."
        }
    }
    
    // MARK: Actions
    
    @IBAction func nextButtonTapped(sender: UIButton) {
...
